--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,23 +11,21 @@ source:
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python
+    - python >=3.6,<4.0
     - pip
   run:
-    - python
+    - python >=3.6,<4.0
     - netcdf4
     - numpy >=1.15
-    - pandas >=0.24,<1.0
-    - pygc >=1.2.0
+    - pandas >=1.0.5
     - python-dateutil
     - pytz
     - shapely
     - simplejson
-    - six
     - cftime >=1.2.1
 
 test:
@@ -35,11 +33,13 @@ test:
     - pocean
   requires:
     - pytest
+    - pip
   imports:
     - pocean
     - pocean.dsg
     - pocean.grid
   commands:
+    - pip check
     - pytest -s -rxs -v pocean
 
 about:
