--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,13 +16,13 @@ build:
 
 requirements:
   host:
-    - python >=3.7,<4.0
+    - python >=3.8
     - setuptools >=42
     - setuptools-scm >=3.4
     - wheel
     - pip
   run:
-    - python >=3.7,<4.0
+    - python >=3.8
     - cftime >=1.2.1
     - netcdf4
     - numpy >=1.20
